# apronymer

./: Cargo.toml  README.md  apronymer.code-workspace
backend/: Cargo.toml
backend/src/: dictionary.rs
frontend/src/: App.tsx  ApronymForm.tsx
src/: dictionary.rs  generator.rs  main.rs  routes.rs
src/static/: form.html
static/: form.html  index.html
